--- a/src/tablecomponent/css/style.css
+++ b/src/tablecomponent/css/style.css
@@ -15,6 +15,31 @@
 #students td {
   border: 1px solid black;
   padding-left: 8px;
+  cursor: pointer;
+}
+
+.pagenos {
+  display: flex;
+  list-style: none;
+}
+.pagenos li {
+  color: white !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: steelblue;
+  margin-right: 4px;
+  margin-top: 10px;
+  padding: 10px;
+  border: 0px solid #494949 !important;
+  display: inline-block;
+  transition: all 0.4s ease 0s;
+  cursor: pointer;
+}
+.pagenos li:hover {
+  color: #ffffff !important;
+  background: #17335c;
+  transform: scaleY(1.3);
+  transition: all 0.4s ease 0s;
 }
 
 /*# sourceMappingURL=style.css.map */
