--- a/src/tablecomponent/scss/style.scss
+++ b/src/tablecomponent/scss/style.scss
@@ -15,5 +15,30 @@
   td{
     border:$border;
     padding-left:8px;
+    cursor: pointer;
   }
+}
+.pagenos{
+  display:flex;
+  list-style:none;
+  li{
+    color:white !important;
+    text-transform: uppercase;
+    text-decoration: none;
+    background:steelblue;
+    margin-right: 4px;
+    margin-top: 10px;
+    padding:10px;
+    border: 0px solid #494949 !important;
+    display: inline-block;
+    transition: all 0.4s ease 0s;
+    cursor: pointer;
+    
+  }
+li:hover{
+  color: #ffffff !important;
+  background:rgb(23, 51, 92);
+  transform: scaleY(1.3);
+  transition: all 0.4s ease 0s;
+} 
 }
